[package]
name = "rocinante"
version = "0.1.0"
authors = ["Joshua Bowles <jbowayles@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bert = "0.4.5"
rust_tokenizers = "2.0.2"
failure = "0.1.6"
dirs = "2.0"
tch = "0.1.6"
actix-web = "2.0"
actix-rt = "1.0"